<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:clipToPadding="false"
    android:id="@+id/layout"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/HeadLineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="textStart"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:elevation="6dp"
        android:background="@color/white"
        app:startIconDrawable="@drawable/ic_account"
        app:startIconTint="@color/colorPrimary"
        app:boxBackgroundMode="none"
        app:hintEnabled="false">
        <EditText
            android:id="@+id/inputUserName"
            style="@style/EditText"
            android:hint="@string/user_name" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:startIconDrawable="@drawable/ic_pass"
        app:startIconTint="@color/colorPrimary"
        app:boxBackgroundMode="none"
        android:layout_marginTop="16dp"
        android:elevation="6dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">
        <EditText
            android:id="@+id/inputPassword"
            style="@style/EditText"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SignIn"
        style="@style/MainButton"
        android:text="@string/login" />
</LinearLayout>